crud_example/src/main/java/com/example/crud_example/error/exceptions/LoginFailedException.java
package com.example.crud_example.error.exceptions;

import com.example.crud_example.error.exception.CustomException;
import com.example.crud_example.error.exception.ErrorCode;

public class LoginFailedException extends CustomException {
    public LoginFailedException() {
        super(ErrorCode.LOGIN_FAILED);
    }
}
